--- a/Backend_Grocery/package.json
+++ b/Backend_Grocery/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/http-errors": "^2.0.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.1"
   }
 }
