--- a/Backend_Grocery/package.json
+++ b/Backend_Grocery/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/soumiaessabiry/Grocery_delivery_mobile_typescript#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "joi-to-typescript": "^4.0.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -30,6 +32,7 @@
     "@types/http-errors": "^2.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "mongoose": "^6.9.1"
   }
 }
