--- a/Backend_Grocery/package.json
+++ b/Backend_Grocery/package.json
@@ -23,13 +23,16 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "bcryptjs": "^2.4.3",
     "joi-to-typescript": "^4.0.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/http-errors": "^2.0.1",
+    "cjs-loader": "^0.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
