--- a/Backend_Grocery/package.json
+++ b/Backend_Grocery/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/soumiaessabiry/Grocery_delivery_mobile_typescript#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "bcryptjs": "^2.4.3",
     "joi-to-typescript": "^4.0.7",
@@ -36,6 +37,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    "mongoose": "^6.9.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
+    "node-localstorage": "^2.2.1",
+    "ts-localstorage": "^2.0.0"
   }
 }
