--- a/Backend_Grocery/package.json
+++ b/Backend_Grocery/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/soumiaessabiry/Grocery_delivery_mobile_typescript#readme",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "joi-to-typescript": "^4.0.7",
     "nodemon": "^2.0.20",
@@ -34,12 +37,15 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/http-errors": "^2.0.1",
     "cjs-loader": "^0.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "node-localstorage": "^2.2.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "ts-localstorage": "^2.0.0"
   }
 }
